# jtop_installer

./: .gitignore  LICENSE  README.md  bootstrap.py  pyproject.toml
jtop_installer/: cli.py  core.py
